--- a/app/src/main/res/values-jv/strings.xml
+++ b/app/src/main/res/values-jv/strings.xml
@@ -420,7 +420,16 @@
     <string name="not_interested">Ora kasengsem</string>
     <string name="manual_reward_verification">Verifikasi Hadiah Manual</string>
     <string name="reward_verification">Verifikasino Hadiahe</string>
+    <string name="social_media_verification">Verifikasino Media Sosial</string>
+    <string name="skip_the_queue">Nglewati ing Antrian</string>
+    <string name="skip_queue_button_text">Mlebet $%1$s</string>
     <string name="account_undergo_review">Akun iki kudu ngalami review sadurunge sampeyan bisa melu ing program hadiah. Iki bisa njupuk ing endi wae saka sawetara menit nganti pirang-pirang dina.</string>
+    <string name="get_instantly_verified">Sampeyan bisa langsung diverifikasi supaya bisa melu program hadiah kanthi nggunakake akun Twitter utawa nglumpukake antrian verifikasi manual.</string>
+    <string name="twitter_verification">Verifikasi Twitter</string>
+    <string name="twitter_verification_desc">Cepet langsung diverifikasi nggunakake akun Twitter sampeyan. Alamat email Twitter sampeyan kudu cocog karo email sing diwenehake lan akun sampeyan kudu aktif.</string>
+    <string name="twitter_verify">Verifikasi karo Twitter</string>
+    <string name="skip_queue_verification">Nglewati ing Antrian</string>
+    <string name="skip_queue_verification_desc">Langsung antrian verifikasi manual kanthi mbayar ragad supaya miwiti melu program hadiah langsung.</string>
     <string name="request_to_be_verified">Nyuwun sewengi ing kene &lt;a href=\"https://discordapp.com/invite/Z3bERWA\"&gt;LBRY Discord server&lt;/a&gt;. Review manual bisa dideleng saka sawetara menit nganti pirang-pirang dina.</string>
     <string name="enjoy_free_content">Mumpung konten gratis!</string>
     <string name="verify_phone_number">Verifikasi Nomer Telpon</string>
@@ -432,6 +441,9 @@
     <string name="fetch_current_user_error">Akun pangguna ora bisa dijupuk maneh ing wektu iki. Coba maneh mengko.</string>
     <string name="purchase_request_pending">Panjaluk tuku sampeyan isih diproses. Mangga ngirim email menyang support@lbry.com.</string>
     <string name="purchase_request_failed_error">Panjaluk tuku sampeyan ora bisa dirampungake ing wektu iki. Mangga ngirim email menyang support@lbry.com.</string>
+    <string name="twitter_account_ineligible">Akun Twitter sampeyan ora layak ing wektu iki: %1$s</string>
+    <string name="twitter_verification_not_approved">Akun sampeyan ora disetujoni kanggo program hadiah. Coba maneh mengko.</string>
+    <string name="twitter_verification_failed">Verifikasi Twitter gagal. Coba maneh mengko.</string>
     <string name="reward_verification_successful">Sampeyan saiki bisa melu program penghargaan!</string>
 
     <!-- Forms -->
