--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -432,7 +432,16 @@
     <string name="not_interested">Não estou interessado</string>
     <string name="manual_reward_verification">Verificação manual de recompensa</string>
     <string name="reward_verification">Verificação de recompensa</string>
+    <string name="social_media_verification">Verificação de mídia social</string>
+    <string name="skip_the_queue">Pular a fila</string>
+    <string name="skip_queue_button_text">Pular para $%1$s</string>
     <string name="account_undergo_review">Esta conta deve ser analisada antes de você participar do programa de recompensas. Isso pode levar de vários minutos a vários dias.</string>
+    <string name="get_instantly_verified">Você pode ser verificado instantaneamente para poder participar do programa de recompensas usando sua conta do Twitter ou pulando a fila de verificação manual.</string>
+    <string name="twitter_verification">Verificação do Twitter</string>
+    <string name="twitter_verification_desc">Seja verificado instantaneamente usando sua conta do Twitter. Seu endereço de e-mail do Twitter deve corresponder ao e-mail que você forneceu e sua conta deve estar ativa.</string>
+    <string name="twitter_verify">Verifique com o Twitter</string>
+    <string name="skip_queue_verification">Pular a fila</string>
+    <string name="skip_queue_verification_desc">Pule a fila de verificação manual pagando uma taxa para começar a participar do programa de recompensas imediatamente.</string>
     <string name="request_to_be_verified">Solicite para ser verificado no  servidor LBRY Discord &lt;a href=\"https://discordapp.com/invite/Z3bERWA\"&gt;LBRY Server do Discord&lt;/a&gt;. Uma revisão manual pode levar de vários minutos a vários dias.</string>
     <string name="enjoy_free_content">Por favor, aproveite o conteúdo gratuito enquanto isso!</string>
     <string name="verify_phone_number">Verifique o número de telefone</string>
@@ -444,6 +453,9 @@
     <string name="fetch_current_user_error">A conta do usuário não pôde ser recuperada neste momento. Por favor, tente novamente mais tarde.</string>
     <string name="purchase_request_pending">Sua solicitação de compra ainda está sendo processada. Envie um e-mail para support@lbry.com.</string>
     <string name="purchase_request_failed_error">Sua solicitação de compra não pôde ser concluída neste momento. Envie um e-mail para support@lbry.com.</string>
+    <string name="twitter_account_ineligible">Sua conta do Twitter não está qualificada no momento: %1$s</string>
+    <string name="twitter_verification_not_approved">Sua conta não foi aprovada para o programa de recompensas. Por favor, tente novamente mais tarde.</string>
+    <string name="twitter_verification_failed">A verificação do Twitter falhou. Por favor, tente novamente mais tarde.</string>
     <string name="reward_verification_successful">Agora você está qualificado para participar do programa de recompensas!</string>
 
     <!-- Forms -->
