--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -456,7 +456,16 @@
     <string name="not_interested">Не интересно </string>
     <string name="manual_reward_verification">Ручное подтверждение наград </string>
     <string name="reward_verification">Подтверждение наград</string>
+    <string name="social_media_verification">Верификация через социальные сети</string>
+    <string name="skip_the_queue">Пропустить очередь</string>
+    <string name="skip_queue_button_text">Пропустить за $%1$s</string>
     <string name="account_undergo_review">Этот аккаунт должен проследовать проверке перед участием в программе вознаграждений. Это может занять от нескольких минут до нескольких дней. </string>
+    <string name="get_instantly_verified">Вы можете сразу пройти проверку для того, чтобы участвовать в программе наград, используя Ваш аккаунт в Твиттере или пропустив проверку вручную.</string>
+    <string name="twitter_verification">Проверка с помощью Твиттера</string>
+    <string name="twitter_verification_desc">Пройдите проверку быстрее с помощью Вашего акккаунта в Твиттере. Адрес электронной почты этого аккаунта должен совпадать с адресом, который Вы предоставили ранее, а также аккаунт должен быть активен.</string>
+    <string name="twitter_verify">Верифицировать с помощью Твиттера</string>
+    <string name="skip_queue_verification">Пропустить очередь</string>
+    <string name="skip_queue_verification_desc">Пропустить очередь проверки, заплатив небольшую сумму, чтобы незамедлительно принять участие в программе наград.</string>
     <string name="request_to_be_verified">Пожалуйста, запросите проверку в &lt;a href=\"https://discordapp.com/invite/Z3bERWA\"&gt;LBRY Discord server&lt;/a&gt;. Проверка вручную может занять от пары минут до нескольких дней.</string>
     <string name="enjoy_free_content">Наслаждайтесь бесплатным контентом в любое время!</string>
     <string name="verify_phone_number">Подтвердите номер телефона</string>
@@ -468,6 +477,9 @@
     <string name="fetch_current_user_error">Не удалось получить информацию об аккаунте. Пожалуйста, попробуйте позже.</string>
     <string name="purchase_request_pending">Ваш запрос о покупке всё ещё обрабатывается. Пожалуйста, отправьте письмо на support@lbry.com.</string>
     <string name="purchase_request_failed_error">Ваш запрос о покупке не может быть обработан на данный момент. Пожалуйста, обратитесь к нам с письмом по адресу support@lbry.com.</string>
+    <string name="twitter_account_ineligible">Пока что Ваш аккаунт в Твиттере нам не подходит: %1$s</string>
+    <string name="twitter_verification_not_approved">Ваш аккаунт не был подтверждён для участия в программе наград. Пожалуйста, повторите попытку позже.</string>
+    <string name="twitter_verification_failed">Проверка Твиттер аккаунта неудалась. Пожалуйста, повторите попытку позже</string>
     <string name="reward_verification_successful">Теперь Вы являетесь участником программмы наград!</string>
 
     <!-- Forms -->
