--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -396,7 +396,16 @@
     <string name="not_interested">Không quan tâm</string>
     <string name="manual_reward_verification">Xác nhận phần thưởng thủ công</string>
     <string name="reward_verification">Xác minh phần thưởng</string>
+    <string name="social_media_verification">Xác minh mạng xã hội</string>
+    <string name="skip_the_queue">Bỏ qua</string>
+    <string name="skip_queue_button_text">Bỏ qua cho $%1$s</string>
     <string name="account_undergo_review">Tài khoản này phải trải qua quá trình xem xét trước khi bạn có thể tham gia chương trình phần thưởng. Điều này có thể mất bất cứ nơi nào từ vài phút đến vài ngày.</string>
+    <string name="get_instantly_verified">Bạn có thể được xác minh ngay lập tức để có thể tham gia vào chương trình phần thưởng bằng tài khoản Twitter của mình hoặc bỏ qua hàng đợi xác minh thủ công.</string>
+    <string name="twitter_verification">Xác minh Twitter</string>
+    <string name="twitter_verification_desc">Được xác minh ngay lập tức bằng tài khoản Twitter của bạn. Địa chỉ email Twitter của bạn phải khớp với email mà bạn đã cung cấp và tài khoản của bạn phải hoạt động.</string>
+    <string name="twitter_verify">Xác minh với Twitter</string>
+    <string name="skip_queue_verification">Bỏ qua</string>
+    <string name="skip_queue_verification_desc">Bỏ qua hàng đợi xác minh thủ công bằng cách trả phí để bắt đầu tham gia chương trình phần thưởng ngay lập tức.</string>
     <string name="request_to_be_verified">Vui lòng yêu cầu được xác minh trên  &lt;a href=\"https://discordapp.com/invite/Z3bERWA\"&gt;LBRY Discord server&lt;/a&gt;. Quá trình xem xét thủ công có thể mất từ ​​vài phút đến vài ngày.</string>
     <string name="enjoy_free_content">Hãy tận hưởng nội dung miễn phí trong khi chờ đợi!</string>
     <string name="verify_phone_number">Xác nhận số điện thoại</string>
@@ -408,6 +417,9 @@
     <string name="fetch_current_user_error">Tài khoản người dùng không thể được lấy tại thời điểm này. Vui lòng thử lại sau.</string>
     <string name="purchase_request_pending">Yêu cầu mua hàng của bạn vẫn đang được xử lý. Vui lòng gửi email tới  support@lbry.com.</string>
     <string name="purchase_request_failed_error">Không thể hoàn thành yêu cầu mua hàng của bạn vào lúc này. Vui lòng gửi email tới support@lbry.com.</string>
+    <string name="twitter_account_ineligible">Tài khoản Twitter của bạn không đủ điều kiện tại thời điểm này:%1$s</string>
+    <string name="twitter_verification_not_approved">Tài khoản của bạn không được chấp thuận cho chương trình phần thưởng. Vui lòng thử lại sau.</string>
+    <string name="twitter_verification_failed">Xác minh Twitter không thành công. Vui lòng thử lại sau.</string>
     <string name="reward_verification_successful">Bây giờ bạn đủ điều kiện để tham gia vào chương trình phần thưởng!</string>
 
     <!-- Forms -->
